--- a/ipynb/ComfyUI/OneClick-ComfyUI-for-Openbayes.ipynb
+++ b/ipynb/ComfyUI/OneClick-ComfyUI-for-Openbayes.ipynb
@@ -873,24 +873,25 @@
         "if os.path.exists(ccp_dir):\n",
         "    # \u6a21\u578b\n",
         "    models = [\n",
-        "        ('dpt_hybrid-midas-501f0c75.pt', 'midas'),  # midas\u6a21\u578b\n",
-        "        ('res101.pth', 'leres'),  # res101.pth\u6a21\u578b\n",
-        "        ('network-bsds500.pth', 'hed'),  # hed\u6a21\u578b\n",
-        "        ('mlsd_large_512_fp32.pth', 'mlsd'),  # mlsd\u6a21\u578b\n",
-        "        ('body_pose_model.pth', 'openpose'),  # body_pose_model\u6a21\u578b\n",
-        "        ('hand_pose_model.pth', 'openpose'),  # hand_pose_model\u6a21\u578b\n",
-        "        ('upernet_global_small.pth', 'uniformer')  # Segmentation\u7684preprocessor\u6a21\u578b\n",
-        "        ('table5_pidinet.pth', '')\n",
+        "        ('dpt_hybrid-midas-501f0c75.pt', './'),  # midas\u6a21\u578b\n",
+        "        ('res101.pth', './'),  # res101.pth\u6a21\u578b\n",
+        "        ('network-bsds500.pth', './'),  # hed\u6a21\u578b\n",
+        "        ('mlsd_large_512_fp32.pth', './'),  # mlsd\u6a21\u578b\n",
+        "        ('body_pose_model.pth', './'),  # body_pose_model\u6a21\u578b\n",
+        "        ('hand_pose_model.pth', './'),  # hand_pose_model\u6a21\u578b\n",
+        "        ('upernet_global_small.pth', './'),  # Segmentation\u7684preprocessor\u6a21\u578b\n",
+        "        ('table5_pidinet.pth', './pidinet')\n",
         "    ]\n",
         "\n",
         "    # \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
         "    for model, directory in models:\n",
-        "        check_model_and_make_symbollink_general(model, './ckpts', copy_or_mount, ccp_dir)\n",
+        "        check_model_and_make_symbollink_general(model, os.path.join('./ckpts',directory), copy_or_mount, ccp_dir)\n",
         "    \n",
         "install_cmd = (' ').join(base_args[:] + [\n",
         "    f'cd {ccp_dir}','&&',\n",
         "    'pip uninstall opencv-python -y','&&',\n",
         "    'pip install opencv-python --user','&&',\n",
+        "    'conda install opencv -y','&&',\n",
         "    'python -V','&&',\n",
         "    'pwd','&&'\n",
         "    'python install.py'\n",
