--- a/ipynb/Kohya/Kohya-for-OpenBayes.ipynb
+++ b/ipynb/Kohya/Kohya-for-OpenBayes.ipynb
@@ -528,15 +528,15 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import json\n",
+        "# import json\n",
         "\n",
-        "def read_and_print_json(file_path):\n",
-        "    with open(file_path) as f:\n",
-        "        data = json.load(f)\n",
-        "        print(json.dumps(data, indent=4))\n",
+        "# def read_and_print_json(file_path):\n",
+        "#     with open(file_path) as f:\n",
+        "#         data = json.load(f)\n",
+        "#         print(json.dumps(data, indent=4))\n",
         "\n",
-        "file_path = \"/openbayes/home/training_sessions/LoRA/config/0318_SDL_ThaiZhu_0.4_Lion_Deepbooru_Dataset_10.json\"\n",
-        "read_and_print_json(file_path)\n"
+        "# file_path = \"/openbayes/home/training_sessions/LoRA/config/0318_SDL_ThaiZhu_0.4_Lion_Deepbooru_Dataset_10.json\"\n",
+        "# read_and_print_json(file_path)\n"
       ]
     },
     {
@@ -585,6 +585,14 @@
         "# pip install --user cmake &&\\\n",
         "# pip -v install -e ."
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "59d64ff2-6017-4406-aecf-f4b1156878e2",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -945,19 +953,19 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import os\n",
+        "# import os\n",
         "\n",
-        "torch_hub_checkpoints_dir = os.path.abspath(os.path.join(root_dir,'.torch/hub/checkpoints/'))\n",
-        "print(torch_hub_checkpoints_dir)\n",
-        "# \u8be5\u6a21\u578b\u7684\u4e0b\u8f7d\u5730\u5740\u4e3a\uff1ahttps://storage.googleapis.com/sfr-vision-language-research/BLIP/models/model_large_caption.pth\n",
-        "check_model_and_make_symbollink('model_large_caption.pth',torch_hub_checkpoints_dir,copy_or_mount)\n",
+        "# torch_hub_checkpoints_dir = os.path.abspath(os.path.join(root_dir,'.torch/hub/checkpoints/'))\n",
+        "# print(torch_hub_checkpoints_dir)\n",
+        "# # \u8be5\u6a21\u578b\u7684\u4e0b\u8f7d\u5730\u5740\u4e3a\uff1ahttps://storage.googleapis.com/sfr-vision-language-research/BLIP/models/model_large_caption.pth\n",
+        "# check_model_and_make_symbollink('model_large_caption.pth',torch_hub_checkpoints_dir,copy_or_mount)\n",
         "\n",
-        "check_model_and_make_symbollink('ViT-L-14_openai_artists.safetensors','./models/clip-interrogator',copy_or_mount)\n",
-        "check_model_and_make_symbollink('ViT-L-14_openai_flavors.safetensors','./models/clip-interrogator',copy_or_mount)\n",
-        "check_model_and_make_symbollink('ViT-L-14_openai_mediums.safetensors','./models/clip-interrogator',copy_or_mount)\n",
-        "check_model_and_make_symbollink('ViT-L-14_openai_movements.safetensors','./models/clip-interrogator',copy_or_mount)\n",
-        "check_model_and_make_symbollink('ViT-L-14_openai_negative.safetensors','./models/clip-interrogator',copy_or_mount)\n",
-        "check_model_and_make_symbollink('ViT-L-14_openai_trendings.safetensors','./models/clip-interrogator',copy_or_mount)"
+        "# check_model_and_make_symbollink('ViT-L-14_openai_artists.safetensors','./models/clip-interrogator',copy_or_mount)\n",
+        "# check_model_and_make_symbollink('ViT-L-14_openai_flavors.safetensors','./models/clip-interrogator',copy_or_mount)\n",
+        "# check_model_and_make_symbollink('ViT-L-14_openai_mediums.safetensors','./models/clip-interrogator',copy_or_mount)\n",
+        "# check_model_and_make_symbollink('ViT-L-14_openai_movements.safetensors','./models/clip-interrogator',copy_or_mount)\n",
+        "# check_model_and_make_symbollink('ViT-L-14_openai_negative.safetensors','./models/clip-interrogator',copy_or_mount)\n",
+        "# check_model_and_make_symbollink('ViT-L-14_openai_trendings.safetensors','./models/clip-interrogator',copy_or_mount)"
       ]
     },
     {
