--- a/ipynb/ComfyUI/OneClick-ComfyUI-for-Openbayes.ipynb
+++ b/ipynb/ComfyUI/OneClick-ComfyUI-for-Openbayes.ipynb
@@ -321,10 +321,10 @@
         "\n",
         "python_version = '3.10.6'\n",
         "\n",
-        "if env_name == 'AutoDL':\n",
-        "    custom_env_name = 'py' + python_version\n",
-        "elif env_name == 'OpenBayes':\n",
-        "    custom_env_name = 'base'\n",
+        "# if env_name == 'AutoDL':\n",
+        "custom_env_name = 'py' + python_version\n",
+        "# elif env_name == 'OpenBayes':\n",
+        "#     custom_env_name = 'base'\n",
         "\n",
         "s = getoutput('conda info --env')\n",
         "print(s)\n",
@@ -461,13 +461,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "triton_install_args = base_args[:]\n",
-        "triton_install_args += [\n",
-        "    'python -m pip install --user -U --pre triton'\n",
-        "]\n",
-        "triton_install_cmd = (\" \").join(triton_install_args)\n",
-        "print(triton_install_cmd)\n",
-        "!$triton_install_cmd"
+        "!{\" \".join(base_args + ['python -m pip install --user -U --pre triton'])}"
       ]
     },
     {
@@ -582,16 +576,16 @@
         "                return False\n",
         "    return True\n",
         "\n",
+        "import re\n",
+        "\n",
         "def find_xformers_whl_and_install(root):\n",
         "    py_short_ver = get_python_version_and_parse()\n",
         "    whl_name = f'xformers*{py_short_ver}*.whl'\n",
         "    whl_path_list = !find $root -name $whl_name\n",
         "    whl_path_list = list(filter(lambda x: x.endswith('.whl'), whl_path_list))\n",
-        "    print(whl_path_list)\n",
         "    if whl_path_list:\n",
-        "        \n",
-        "        whl_path = whl_path_list[0]\n",
-        "        # subprocess.run(['pip', 'install', whl_path], stdout=subprocess.PIPE)\n",
+        "        whl_path_list = sorted(whl_path_list, key=lambda x: [int(d) if d.isdigit() else d for d in re.split(r'(\\d+)', x)])\n",
+        "        whl_path = whl_path_list[-1]\n",
         "        !pip install $whl_path --user \n",
         "        return whl_path\n",
         "    else:\n",
@@ -621,7 +615,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "a2b66506-0c02-4968-a374-a88e9c357729",
-      "metadata": {},
+      "metadata": {
+        "scrolled": true
+      },
       "outputs": [],
       "source": [
         "# # \u5b89\u88c5\u5b8c\u518d\u6b21\u9a8c\u8bc1Xformers\u662f\u5426\u80fd\u6b63\u5e38\u8fd0\u4f5c\uff1a\n",
@@ -793,7 +789,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install transformers --upgrade --user"
+        "!{\" \".join(base_args + ['pip install transformers --upgrade --user'])}"
       ]
     },
     {
