--- a/tools/pack_tools/easyPackRootPylibs.ipynb
+++ b/tools/pack_tools/easyPackRootPylibs.ipynb
@@ -139,21 +139,18 @@
       "outputs": [],
       "source": [
         "import os\n",
+        "import subprocess\n",
         "\n",
-        "def compress_pylibs(target_dir):\n",
-        "    arch_dir = '/root/.pylibs'\n",
-        "    \n",
-        "    # \u68c0\u67e5/root\u76ee\u5f55\u4e0b\u662f\u5426\u5b58\u5728.pylibs\u6587\u4ef6\u5939\n",
+        "def compress_pylibs(arch_dir, target_file):\n",
+        "    # \u68c0\u67e5\u538b\u7f29\u6587\u4ef6\u5939\u8def\u5f84\u662f\u5426\u5b58\u5728\n",
         "    if not os.path.exists(arch_dir):\n",
-        "        print(f'Error: {arch_dir}\u6587\u4ef6\u5939\u4e0d\u5b58\u5728\uff01')\n",
-        "        return\n",
+        "        raise ValueError(f'{arch_dir}\u6587\u4ef6\u5939\u4e0d\u5b58\u5728\uff01')\n",
         "    \n",
-        "    # \u68c0\u67e5target_dir\u76ee\u5f55\u662f\u5426\u5b58\u5728\uff0c\u82e5\u4e0d\u5b58\u5728\u5219\u521b\u5efa\u8be5\u76ee\u5f55\n",
-        "    if not os.path.exists(target_dir):\n",
-        "        os.makedirs(target_dir)\n",
+        "    # \u68c0\u67e5\u8f93\u51fa\u8def\u5f84\u662f\u5426\u5b58\u5728\uff0c\u82e5\u4e0d\u5b58\u5728\u5219\u521b\u5efa\u8be5\u8def\u5f84\n",
+        "    if not os.path.exists(os.path.dirname(target_file)):\n",
+        "        os.makedirs(os.path.dirname(target_file))\n",
         "    \n",
-        "    # \u4f7f\u75287z\u6700\u9ad8\u538b\u7f29\u7ea7\u522b\u7684\u65b9\u6cd5\uff0c\u538b\u7f29/root/.pylibs\u6587\u4ef6\u5939\n",
-        "    target_file = f'{target_dir}/pylibs.7z'\n",
+        "    # \u4f7f\u75287z\u6700\u9ad8\u538b\u7f29\u7ea7\u522b\u7684\u65b9\u6cd5\uff0c\u538b\u7f29\u6587\u4ef6\u5939\n",
         "    if not os.path.exists(target_file):\n",
         "        !7z a -t7z -m0=lzma2 -mx=9 -mfb=64 -md=32m -ms=on {target_file} {arch_dir}\n",
         "    \n",
@@ -163,8 +160,9 @@
         "    arch_size = sum(os.path.getsize(os.path.join(root, file)) for root, dirs, files in os.walk(arch_dir) for file in files)\n",
         "    compressed_ratio = file_size / arch_size * 100\n",
         "    print(f'\u538b\u7f29\u5b8c\u6210\uff01\\n\u538b\u7f29\u6bd4: {compressed_ratio:.2f}%')\n",
-        "    \n",
-        "compress_pylibs(root_dir)"
+        "\n",
+        "compress_pylibs('/root/.pylibs', f'{root_dir}/pylibs.7z')\n",
+        "compress_pylibs(f'/{root_dir}/py3.10.6', f'{root_dir}/py3.10.6.7z')"
       ]
     }
   ],
