donot use --user

--- a/ipynb/ComfyUI/OneClick-ComfyUI-for-Openbayes.ipynb
+++ b/ipynb/ComfyUI/OneClick-ComfyUI-for-Openbayes.ipynb
@@ -461,7 +461,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!{\" \".join(base_args + ['python -m pip install --user -U --pre triton'])}"
+        "!{\" \".join(base_args + ['python -m pip install -U --pre triton'])}"
       ]
     },
     {
@@ -586,7 +586,7 @@
         "    if whl_path_list:\n",
         "        whl_path_list = sorted(whl_path_list, key=lambda x: [int(d) if d.isdigit() else d for d in re.split(r'(\\d+)', x)])\n",
         "        whl_path = whl_path_list[-1]\n",
-        "        !pip install $whl_path --user \n",
+        "        !{\" \".join(base_args + [f'pip install {whl_path}'])}\n",
         "        return whl_path\n",
         "    else:\n",
         "        return None\n",
