remove --user args

--- a/ipynb/ComfyUI/OneClick-ComfyUI-for-Openbayes.ipynb
+++ b/ipynb/ComfyUI/OneClick-ComfyUI-for-Openbayes.ipynb
@@ -175,7 +175,7 @@
         "        print(f\"\u3010 {library} \u3011\u5df2\u7ecf\u5b89\u88c5\uff0c\u8df3\u8fc7\u5b89\u88c5\")\n",
         "        continue\n",
         "    elif not any(library in installed_library for installed_library in installed_libraries):\n",
-        "        !pip install $library --user\n",
+        "        !pip install $library\n",
         "    else:\n",
         "        print(f\"\u3010 {library} \u3011\u5df2\u7ecf\u5b89\u88c5\uff0c\u8df3\u8fc7\u5b89\u88c5\")\n",
         "        \n",
@@ -483,6 +483,16 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "72702501-8852-47b1-b689-6a7c7e56db5a",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# !{\" \".join(base_args + ['pip install -U xformers -i https://pypi.org/simple/'])}"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "83adc99b-bea1-4e9f-9153-2cbcc281e14b",
       "metadata": {},
@@ -532,12 +542,12 @@
         "'''\n",
         "\n",
         "def get_python_version_and_parse():\n",
-        "    # Get the current python version\n",
-        "    version = subprocess.run(['python', '-V'], stdout=subprocess.PIPE).stdout.decode().strip()\n",
-        "    version = version.split(' ')[1]\n",
-        "    major, minor, patch = version.split('.')\n",
+        "    # Get the current python version using IPython magic command\n",
+        "    version = !{\" \".join(base_args + ['python -V'])}\n",
+        "    version = version[0].split(' ')[1]\n",
+        "    major, minor, _ = version.split('.')\n",
         "    # formatted_version = f'cp{major}{minor[0]}{patch[0]}'\n",
-        "    formatted_version = f'cp{major}{minor[0]}'\n",
+        "    formatted_version = f'cp{major}{minor}'\n",
         "    return formatted_version\n",
         "\n",
         "\n",
@@ -586,7 +596,7 @@
         "    if whl_path_list:\n",
         "        whl_path_list = sorted(whl_path_list, key=lambda x: [int(d) if d.isdigit() else d for d in re.split(r'(\\d+)', x)])\n",
         "        whl_path = whl_path_list[-1]\n",
-        "        !{\" \".join(base_args + [f'pip install {whl_path}'])}\n",
+        "        !{\" \".join(base_args + [f'python -m pip install {whl_path}'])}\n",
         "        return whl_path\n",
         "    else:\n",
         "        return None\n",
@@ -620,37 +630,41 @@
       },
       "outputs": [],
       "source": [
-        "# # \u5b89\u88c5\u5b8c\u518d\u6b21\u9a8c\u8bc1Xformers\u662f\u5426\u80fd\u6b63\u5e38\u8fd0\u4f5c\uff1a\n",
-        "# if check_xformers_info(validate_rules):\n",
-        "#     print(f'\u5b89\u88c5\u540e\u53ef\u4ee5\u6b63\u5e38\u8fd0\u884c\uff0c\u65e0\u9700\u91cd\u65b0\u7f16\u8bd1')\n",
-        "# else:\n",
-        "#     print('\u9700\u8981\u5728\u672c\u673a\u8fdb\u884cXformers\u7684\u7f16\u8bd1')\n",
-        "#     # (Optional) Makes the build much faster\n",
-        "#     !pip install ninja\n",
-        "#     # Set TORCH_CUDA_ARCH_LIST if running and building on different GPU types\n",
-        "#     # !pip install -v -U git+https://github.com/facebookresearch/xformers.git@main#egg=xformers\n",
+        "# \u5b89\u88c5\u5b8c\u518d\u6b21\u9a8c\u8bc1Xformers\u662f\u5426\u80fd\u6b63\u5e38\u8fd0\u4f5c\uff1a\n",
+        "if check_xformers_info(validate_rules):\n",
+        "    print(f'\u5b89\u88c5\u540e\u53ef\u4ee5\u6b63\u5e38\u8fd0\u884c\uff0c\u65e0\u9700\u91cd\u65b0\u7f16\u8bd1')\n",
+        "else:\n",
+        "    print('\u9700\u8981\u5728\u672c\u673a\u8fdb\u884cXformers\u7684\u7f16\u8bd1')\n",
+        "    # (Optional) Makes the build much faster\n",
+        "    !{\" \".join(base_args + ['pip install ninja'])}\n",
+        "    # Set TORCH_CUDA_ARCH_LIST if running and building on different GPU types\n",
+        "    # !pip install -v -U git+https://github.com/facebookresearch/xformers.git@main#egg=xformers\n",
         "\n",
-        "#     xformers_repo_dir = os.path.join(root_dir,'xformers')\n",
+        "    xformers_repo_dir = os.path.join(root_dir,'xformers')\n",
         "\n",
-        "#     if not os.path.exists(xformers_repo_dir):\n",
-        "#         !cd $root_dir &&\\\n",
-        "#         git clone https://github.com/facebookresearch/xformers.git\n",
+        "    if not os.path.exists(xformers_repo_dir):\n",
+        "        !cd $root_dir &&\\\n",
+        "        git clone https://github.com/facebookresearch/xformers.git\n",
         "\n",
-        "#     # \u8bb0\u5f55\u4e00\u6b21\u7f16\u8bd1\u6240\u9700\u8017\u65f6\u4e3a 6m 17.51s\n",
-        "#     !cd $root_dir &&\\\n",
-        "#     cd xformers &&\\\n",
-        "#     git show-ref main &&\\\n",
-        "#     git symbolic-ref -q HEAD &&\\\n",
-        "#     git submodule update --init --recursive -q &&\\\n",
-        "#     python setup.py egg_info &&\\\n",
-        "#     cd xformers.egg-info &&\\\n",
-        "#     pip install -r requires.txt &&\\\n",
-        "#     cd .. &&\\\n",
-        "#     git rev-parse HEAD &&\\\n",
-        "#     python setup.py bdist_wheel\n",
+        "    # \u8bb0\u5f55\u4e00\u6b21\u7f16\u8bd1\u6240\u9700\u8017\u65f6\u4e3a 6m 17.51s\n",
+        "    compile_args = base_args + [\n",
+        "        f\"cd {root_dir} &&\",\n",
+        "        \"cd xformers &&\",\n",
+        "        \"git show-ref main &&\",\n",
+        "        \"git symbolic-ref -q HEAD &&\",\n",
+        "        \"git submodule update --init --recursive -q &&\",\n",
+        "        \"python setup.py egg_info &&\",\n",
+        "        \"cd xformers.egg-info &&\",\n",
+        "        \"pip install -r requires.txt &&\",\n",
+        "        \"cd .. &&\",\n",
+        "        \"git rev-parse HEAD &&\",\n",
+        "        \"python setup.py bdist_wheel\"\n",
+        "    ]\n",
+        "    !{\" \".join(compile_args)}\n",
         "\n",
-        "#     # \u5b89\u88c5\u5b8c\u6210\u540e\uff0c\u627e\u5230\u5bf9\u5e94\u7684whl\uff0c\u4f7f\u7528pip\u8fdb\u884c\u5b89\u88c5\n",
-        "#     find_xformers_whl_and_install('/')"
+        "\n",
+        "    # \u5b89\u88c5\u5b8c\u6210\u540e\uff0c\u627e\u5230\u5bf9\u5e94\u7684whl\uff0c\u4f7f\u7528pip\u8fdb\u884c\u5b89\u88c5\n",
+        "    find_xformers_whl_and_install('/')"
       ]
     },
     {
@@ -722,7 +736,7 @@
         "        '&&',\n",
         "        # 'conda config --append channels conda-forge','&&',\n",
         "        # 'conda install --yes --file requirements.txt','&&',\n",
-        "        'python -m pip install -r requirements.txt --user'\n",
+        "        'python -m pip install -r requirements.txt'\n",
         "    ]\n",
         "    update_sd_webui_cmd = (\" \").join(update_sd_webui_args)\n",
         "    print(update_sd_webui_cmd)\n",
@@ -751,7 +765,7 @@
         "        '&&',\n",
         "        # 'conda config --append channels conda-forge','&&',\n",
         "        # 'conda install --yes --file requirements.txt','&&',\n",
-        "        'python -m pip install -r requirements.txt --user'\n",
+        "        'python -m pip install -r requirements.txt'\n",
         "    ]\n",
         "    sd_webui_download_cmd = (\" \").join(sd_webui_download_args)\n",
         "    print(sd_webui_download_cmd)\n",
@@ -789,7 +803,7 @@
       },
       "outputs": [],
       "source": [
-        "!{\" \".join(base_args + ['pip install transformers --upgrade --user'])}"
+        "!{\" \".join(base_args + ['python -m pip install transformers --upgrade'])}"
       ]
     },
     {
@@ -855,7 +869,7 @@
         "\n",
         "mvcc_install_cmd = (' ').join(base_args[:] + [\n",
         "    f'cd {mmcv_dir}','&&',\n",
-        "    'pip install -e . --user'\n",
+        "    'pip install -e .'\n",
         "])\n",
         "!$mvcc_install_cmd\n",
         "\n",
@@ -886,7 +900,7 @@
         "install_cmd = (' ').join(base_args[:] + [\n",
         "    f'cd {ccp_dir}','&&',\n",
         "    'pip uninstall opencv-python -y','&&',\n",
-        "    'pip install opencv-python --user','&&',\n",
+        "    'pip install opencv-python','&&',\n",
         "    'conda install opencv -y','&&',\n",
         "    'python -V','&&',\n",
         "    'pwd','&&'\n",
