--- a/ipynb/ComfyUI/OneClick-ComfyUI-for-Openbayes.ipynb
+++ b/ipynb/ComfyUI/OneClick-ComfyUI-for-Openbayes.ipynb
@@ -907,6 +907,17 @@
         "    'python install.py'\n",
         "])\n",
         "\n",
+        "# # \u53e6\u4e00\u79cd\u4fee\u590d\u65b9\u6cd5\uff0c\u672a\u5c1d\u8bd5\u8fc7\uff0c\u51fa\u81ea\uff1ahttps://github.com/Fannovel16/comfy_controlnet_preprocessors/issues/18\n",
+        "# install_cmd = (' ').join(base_args[:] + [\n",
+        "#     f'cd {ccp_dir}','&&',\n",
+        "#     'pip install --upgrade --force-reinstall opencv-python','&&',\n",
+        "#     'pip install --upgrade --force-reinstall scikit-image','&&',\n",
+        "#     'pip install --upgrade --force-reinstall addict','&&',\n",
+        "#     'python -V','&&',\n",
+        "#     'pwd','&&'\n",
+        "#     'python install.py'\n",
+        "# ])\n",
+        "\n",
         "print(install_cmd)\n",
         "\n",
         "!$install_cmd"
