--- a/tools/pack_tools/easyPackRootPylibs.ipynb
+++ b/tools/pack_tools/easyPackRootPylibs.ipynb
@@ -161,9 +161,17 @@
         "    compressed_ratio = file_size / arch_size * 100\n",
         "    print(f'\u538b\u7f29\u5b8c\u6210\uff01\\n\u538b\u7f29\u6bd4: {compressed_ratio:.2f}%')\n",
         "\n",
-        "compress_pylibs('/root/.pylibs', f'{root_dir}/pylibs.7z')\n",
-        "compress_pylibs(f'/{root_dir}/py3.10.6', f'{root_dir}/py3.10.6.7z')"
+        "# compress_pylibs('/root/.pylibs', f'{root_dir}/pylibs.7z')\n",
+        "compress_pylibs(f'/root/.conda/envs/py3.10.6', f'{root_dir}/py3.10.6.7z')"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "52d43e36-ee4d-4404-9171-775542238a45",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
