add ComfyUI WAS nodes

--- a/ipynb/ComfyUI/OneClick-ComfyUI-for-Openbayes.ipynb
+++ b/ipynb/ComfyUI/OneClick-ComfyUI-for-Openbayes.ipynb
@@ -835,6 +835,41 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "7ff4a4bb-6c5d-4e09-a10d-1d6c75b4b256",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "custom_nodes_dir = os.path.join(comfyUIDir,'./custom_nodes')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "688ad68d-b68e-4ca0-8f40-f757b40dbe95",
+      "metadata": {},
+      "source": [
+        "## WAS's Comprehensive Node Suite WAS\u7684\u5168\u9762\u8282\u70b9\u5957\u4ef6\n",
+        "https://github.com/WASasquatch/was-node-suite-comfyui"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "a5817305-f49d-4559-b9d1-caf253acd6c4",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "was_dir = os.path.join(custom_nodes_dir,'./was-node-suite-comfyui')\n",
+        "if not os.path.exists(was_dir):\n",
+        "    clone_was_cmd = (' ').join(base_args[:] + [\n",
+        "        f'cd {custom_nodes_dir}','&&',\n",
+        "        'git clone https://github.com/WASasquatch/was-node-suite-comfyui'\n",
+        "    ])\n",
+        "    !$clone_was_cmd"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "b224635d-08b4-4979-a332-73d7d544480b",
       "metadata": {},
@@ -849,7 +884,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "custom_nodes_dir = os.path.join(comfyUIDir,'./custom_nodes')\n",
         "ccp_dir = os.path.join(custom_nodes_dir,'./comfy_controlnet_preprocessors')\n",
         "\n",
         "# dep_install_cmd = (' ').join(base_args[:] + [\n",
@@ -1346,7 +1380,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "d8acfb1f-97e1-42e6-9775-74e93f36f39c",
+      "id": "829ac667-d5d3-446b-9167-6bd313e601ca",
       "metadata": {},
       "outputs": [],
       "source": []
