--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -192,7 +192,7 @@
         "\n",
         "def install_library(library):\n",
         "    \"\"\"\u5b89\u88c5\u6307\u5b9a\u7684\u5e93\"\"\"\n",
-        "    !pip install $library --user\n",
+        "    !pip install $library\n",
         "\n",
         "# \u83b7\u53d6\u5df2\u5b89\u88c5\u7684\u5e93\u5217\u8868\n",
         "installed_libraries = get_installed_libraries()\n",
@@ -348,10 +348,10 @@
         "\n",
         "python_version = '3.10.6'\n",
         "\n",
-        "if env_name == 'AutoDL':\n",
-        "    custom_env_name = 'py' + python_version\n",
-        "elif env_name == 'OpenBayes':\n",
-        "    custom_env_name = 'base'\n",
+        "# if env_name == 'AutoDL':\n",
+        "custom_env_name = 'py' + python_version\n",
+        "# elif env_name == 'OpenBayes':\n",
+        "    # custom_env_name = 'base'\n",
         "\n",
         "s = getoutput('conda info --env')\n",
         "print(s)\n",
@@ -493,7 +493,7 @@
       "source": [
         "triton_install_args = base_args[:]\n",
         "triton_install_args += [\n",
-        "    'python -m pip install --user -U --pre triton'\n",
+        "    'python -m pip install -U --pre triton'\n",
         "]\n",
         "triton_install_cmd = (\" \").join(triton_install_args)\n",
         "print(triton_install_cmd)\n",
@@ -622,7 +622,7 @@
         "        \n",
         "        whl_path = whl_path_list[0]\n",
         "        # subprocess.run(['pip', 'install', whl_path], stdout=subprocess.PIPE)\n",
-        "        !pip install $whl_path --user \n",
+        "        !pip install $whl_path \n",
         "        return whl_path\n",
         "    else:\n",
         "        return None\n",
@@ -759,7 +759,7 @@
         "        update_sd_webui_args += [\n",
         "            'python -V',\n",
         "            '&&',\n",
-        "            'python -m pip install -r requirements_versions.txt --user'\n",
+        "            'python -m pip install -r requirements_versions.txt'\n",
         "        ]\n",
         "        update_sd_webui_cmd = (\" \").join(update_sd_webui_args)\n",
         "        print(update_sd_webui_cmd)\n",
@@ -791,7 +791,7 @@
         "        sd_webui_download_args += [\n",
         "            'python -V',\n",
         "            '&&',\n",
-        "            'python -m pip install -r requirements_versions.txt --user'\n",
+        "            'python -m pip install -r requirements_versions.txt'\n",
         "        ]\n",
         "        sd_webui_download_cmd = (\" \").join(sd_webui_download_args)\n",
         "        print(sd_webui_download_cmd)\n",
@@ -2124,9 +2124,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install gradio==3.23 -i https://pypi.org/simple --user\n",
-        "!pip install clip-interrogator==0.6.0 --prefer-binary -i https://pypi.org/simple --user\n",
-        "!pip install transformers -i https://pypi.org/simple --user"
+        "# !{\" \".join(base_args + ['pip install gradio==3.23 -i https://pypi.org/simple','pip install clip-interrogator==0.6.0 --prefer-binary -i https://pypi.org/simple','pip install transformers -i https://pypi.org/simple'])}"
       ]
     },
     {
