--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -2124,7 +2124,12 @@
       },
       "outputs": [],
       "source": [
-        "# !{\" \".join(base_args + ['pip install gradio==3.23 -i https://pypi.org/simple','pip install clip-interrogator==0.6.0 --prefer-binary -i https://pypi.org/simple','pip install transformers -i https://pypi.org/simple'])}"
+        "extra_libs_install_args = [\n",
+        "    'pip install gradio==3.23 -i https://pypi.org/simple',\n",
+        "    'pip install clip-interrogator==0.6.0 --prefer-binary -i https://pypi.org/simple',\n",
+        "    'pip install --force-reinstall transformers -i https://pypi.org/simple'\n",
+        "]\n",
+        "!{\" \".join(base_args + extra_libs_install_args)}"
       ]
     },
     {
@@ -2222,7 +2227,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "c45b202e-a855-45d7-80d7-5786d023b189",
+      "id": "dac001ad-8410-4034-b39d-150518fcd3bb",
       "metadata": {},
       "outputs": [],
       "source": []
