--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -2127,7 +2127,7 @@
         "extra_libs_install_args = [\n",
         "    'pip install gradio==3.23 -i https://pypi.org/simple',\n",
         "    'pip install clip-interrogator==0.6.0 --prefer-binary -i https://pypi.org/simple',\n",
-        "    'pip install --force-reinstall transformers -i https://pypi.org/simple'\n",
+        "    'pip install transformers -i https://pypi.org/simple'\n",
         "]\n",
         "!{\" \".join(base_args + extra_libs_install_args)}"
       ]
