Kohya use py3.10.6

--- a/ipynb/Kohya/Kohya-for-OpenBayes.ipynb
+++ b/ipynb/Kohya/Kohya-for-OpenBayes.ipynb
@@ -242,10 +242,10 @@
         "\n",
         "python_version = '3.10.6'\n",
         "\n",
-        "if env_name == 'AutoDL':\n",
-        "    custom_env_name = 'py' + python_version\n",
-        "elif env_name == 'OpenBayes':\n",
-        "    custom_env_name = 'base'\n",
+        "# if env_name == 'AutoDL':\n",
+        "custom_env_name = 'py' + python_version\n",
+        "# elif env_name == 'OpenBayes':\n",
+        "#     custom_env_name = 'base'\n",
         "\n",
         "s = getoutput('conda info --env')\n",
         "print(s)\n",
