--- a/ipynb/ComfyUI/OneClick-ComfyUI-for-Openbayes.ipynb
+++ b/ipynb/ComfyUI/OneClick-ComfyUI-for-Openbayes.ipynb
@@ -892,20 +892,24 @@
         "                   \n",
         "# !$dep_install_cmd\n",
         "\n",
-        "mmcv_dir = os.path.join(root_dir,'./mmcv')\n",
+        "## \u5c1d\u8bd5\u4e0d\u5b89\u88c5mmcv\uff0c\u770b\u80fd\u4e0d\u80fd\u6210\u529f\n",
+        "# mmcv_dir = os.path.join(root_dir,'./mmcv')\n",
         "\n",
-        "if not os.path.exists(mmcv_dir):\n",
-        "    clone_mvcc_cmd = (' ').join(base_args[:] + [\n",
-        "        f'cd {root_dir}','&&',\n",
-        "        'git clone https://github.com/open-mmlab/mmcv.git'\n",
-        "    ])\n",
-        "    !$clone_mvcc_cmd\n",
+        "# if not os.path.exists(mmcv_dir):\n",
+        "#     clone_mvcc_cmd = (' ').join(base_args[:] + [\n",
+        "#         f'cd {root_dir}','&&',\n",
+        "#         'git clone https://github.com/open-mmlab/mmcv.git'\n",
+        "#     ])\n",
+        "#     !$clone_mvcc_cmd\n",
         "\n",
-        "mvcc_install_cmd = (' ').join(base_args[:] + [\n",
-        "    f'cd {mmcv_dir}','&&',\n",
-        "    'pip install -e .'\n",
-        "])\n",
-        "!$mvcc_install_cmd\n",
+        "# mvcc_install_cmd = (' ').join(base_args[:] + [\n",
+        "#     f'cd {mmcv_dir}','&&',\n",
+        "#     'pip install -e .'\n",
+        "# ])\n",
+        "# !$mvcc_install_cmd\n",
+        "\n",
+        "# # \u6709\u53e6\u4e00\u79cd\u66f4\u7b80\u4fbf\u7684\u5b89\u88c5\u65b9\u5f0f\uff0c\u8be6\u60c5\u8bf7\u53c2\u8003\uff1ahttps://github.com/open-mmlab/mmcv\n",
+        "# !{\" \".join(base_args + ['pip install -U openmim','&&','mim install \"mmcv>=2.0.0rc1\"'])}\n",
         "\n",
         "clone_ccp_cmd = (' ').join(base_args[:]+[\n",
         "    f'cd {custom_nodes_dir}','&&',\n",
@@ -1376,6 +1380,14 @@
         "!$launch_cmd\n",
         "# !python main.py --dont-print-server"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "8244d965-1bea-4b86-88f9-6e9b02146204",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
