--- a/ipynb/Kohya/Kohya-for-OpenBayes.ipynb
+++ b/ipynb/Kohya/Kohya-for-OpenBayes.ipynb
@@ -854,6 +854,7 @@
       "outputs": [],
       "source": [
         "import re\n",
+        "import os\n",
         "\n",
         "def add_input_to_placeholder(filename, input):\n",
         "    with open(filename, 'r') as f:\n",
@@ -868,10 +869,13 @@
         "        placeholder_end = placeholder_match.end()\n",
         "        new_content = content[:placeholder_end] + f'\\n,value=\"{input}\"' + content[placeholder_end:]\n",
         "        \n",
-        "        with open(filename, 'w') as f:\n",
-        "            f.write(new_content)\n",
-        "            \n",
-        "        print(f\"\u6210\u529f\u5728\u6587\u4ef6{filename}\u4e2d\u6dfb\u52a0input\u503c{input}\")\n",
+        "        if f',value=\"{input}\"' not in content:\n",
+        "            with open(filename, 'w') as f:\n",
+        "                f.write(new_content)\n",
+        "                \n",
+        "            print(f\"\\033[33m\u6587\u4ef6{filename}\u5df2\u6dfb\u52a0input\u503c{input}\\033[0m\")\n",
+        "        else:\n",
+        "            print(f\"\\033[33m\u6587\u4ef6{filename}\u5df2\u5305\u542binput\u503c{input}\\033[0m\")\n",
         "        \n",
         "    else:\n",
         "        print(f\"\u5728\u6587\u4ef6{filename}\u4e2d\u672a\u627e\u5230placeholder\")\n",
@@ -890,14 +894,8 @@
         "        # \u6253\u5370\u9519\u8bef\u6d88\u606f\n",
         "        print(f\"\\033[31m\u274c \u6587\u4ef6 {file_path} \u4e0d\u5305\u542b\u6240\u671f\u671b\u7684\u6587\u672c '{expected_text}'\\033[0m\")\n",
         "\n",
-        "\n",
-        "import os\n",
-        "\n",
-        "\n",
-        "add_text = config_path\n",
-        "\n",
         "file_path = os.path.join(root_dir, \"kohya_ss/library/common_gui.py\")\n",
-        "add_input_to_placeholder(file_path, add_text)\n",
+        "add_input_to_placeholder(file_path, config_path)\n",
         "expected_text = config_path\n",
         "validate_text_in_file(file_path, expected_text)"
       ]
