improve Kohya settings

--- a/ipynb/Kohya/Kohya-for-OpenBayes.ipynb
+++ b/ipynb/Kohya/Kohya-for-OpenBayes.ipynb
@@ -2,6 +2,25 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "id": "e2f04ec1-3827-4f06-a1c4-a1ebf1a8349f",
+      "metadata": {},
+      "source": [
+        "# \u6b64\u6b21\u8bad\u7ec3\u914d\u7f6e\n",
+        "\u586b\u5199\u6216\u4fee\u6539\u540e\u518d\u8fd0\u884c\u6b64ipynb"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "ab1664de-c977-4083-bc48-6454d75ca391",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "session_name = 'MyTrain'"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "cbf53013-dccd-4d2b-bf51-655f4de4923b",
       "metadata": {},
       "source": [
@@ -368,9 +387,6 @@
       "source": [
         "import os\n",
         "\n",
-        "# \u6bcf\u6b21\u8bad\u7ec3\u8ba1\u5212\u90fd\u4e0d\u4e00\u6837\u7684\u914d\u7f6e\n",
-        "session_name = 'ThaiZhu'\n",
-        "\n",
         "# \u76f8\u5bf9\u56fa\u5b9a\u7684\u914d\u7f6e\n",
         "training_sessions_name = 'training_sessions'\n",
         "\n",
@@ -497,10 +513,10 @@
         "path_dict = {\n",
         "    'pretrained_model_name_or_path': f'{root_dir}/base_model/chilloutmix_NiPrunedFp16.safetensors',\n",
         "    'logging_dir': f'{root_dir}/tf_dir',\n",
-        "    'train_data_dir': f'{root_dir}/training_sessions/{session_name}/image',\n",
+        "    'train_data_dir': f'{root_dir}/training_sessions/{session_name}/img',\n",
         "    'reg_data_dir': f'{root_dir}/training_sessions/{session_name}/reg',\n",
         "    'output_dir': f'{root_dir}/training_sessions/{session_name}/model',\n",
-        "    'output_name': f'{generate_date()}_SDL_{session_name}_0.4_Lion_Deepbooru_Dataset_10',\n",
+        "    'output_name': f'{session_name}_v1_{generate_date()}_',\n",
         "}\n",
         "\n",
         "standard_json.update(path_dict)\n",
@@ -585,14 +601,6 @@
         "# pip install --user cmake &&\\\n",
         "# pip -v install -e ."
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "59d64ff2-6017-4406-aecf-f4b1156878e2",
-      "metadata": {},
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "markdown",
@@ -941,6 +949,36 @@
     },
     {
       "cell_type": "markdown",
+      "id": "e7850974-df26-4300-87a4-b28bc9780158",
+      "metadata": {},
+      "source": [
+        "## \u5b89\u88c5BLIP"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "11d61041-45cc-466a-8c25-2d342dc50531",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# !pip install blip blip-ci"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "ecf926ac-32a3-4152-86f9-75aec66e2dab",
+      "metadata": {
+        "scrolled": true
+      },
+      "outputs": [],
+      "source": [
+        "# !{\" \".join(base_args + ['pip install fairscale==0.4.13 timm==0.6.12 requests==2.28.2','&&','pip install --index-url https://pypi.python.org/simple/ --upgrade blip'])}"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "35be05d6-8983-4bd9-b25c-51620a5cee84",
       "metadata": {},
       "source": [
@@ -954,8 +992,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!pip uninstall accelerate -y\n",
-        "!pip install accelerate"
+        "# !pip uninstall accelerate -y\n",
+        "# !pip install accelerate"
       ]
     },
     {
