update models list

--- a/ipynb/Kohya/Kohya-for-OpenBayes.ipynb
+++ b/ipynb/Kohya/Kohya-for-OpenBayes.ipynb
@@ -1028,6 +1028,45 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "71e106e4-1b0e-46ff-856e-82a067daeb89",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import yaml\n",
+        "\n",
+        "def read_yaml_file(file_path):\n",
+        "    with open(file_path, 'r') as f:\n",
+        "        yaml_data = yaml.safe_load(f)\n",
+        "    return yaml_data\n",
+        "\n",
+        "# \u8c03\u7528\u51fd\u6570\u5e76\u4f20\u5165YAML\u6587\u4ef6\u8def\u5f84\n",
+        "models_yaml_path = os.path.join(repo_root_dir,'./configs/models_list/models.yaml')\n",
+        "models_list = read_yaml_file(models_yaml_path)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "1c47e682-4ea3-4a6e-8c34-0915be102b54",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Stable-diffusion \u6a21\u578b\n",
+        "sd_models = models_list['sd_models']\n",
+        "\n",
+        "# \u521b\u5efabase_model\u76ee\u5f55\n",
+        "base_model_dir = os.path.join(root_dir, 'base_model')\n",
+        "if not os.path.exists(base_model_dir):\n",
+        "    os.mkdir(base_model_dir)\n",
+        "\n",
+        "# \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
+        "for model in sd_models:\n",
+        "    check_model_and_make_symbollink(model, base_model_dir, copy_or_mount)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "id": "1f612dc0-d677-463e-a2cf-fc851f2b99ef",
       "metadata": {},
       "outputs": [],
