--- a/ipynb/Kohya/Kohya-for-OpenBayes.ipynb
+++ b/ipynb/Kohya/Kohya-for-OpenBayes.ipynb
@@ -16,7 +16,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "session_name = 'MyTrain'"
+        "session_name = '3D_icon'"
       ]
     },
     {
