--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -895,6 +895,38 @@
     },
     {
       "cell_type": "markdown",
+      "id": "25531548-391c-4b34-a8ec-de8719138ff5",
+      "metadata": {},
+      "source": [
+        "## \u5b89\u88c5Wildcards"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "d12dad10-36f8-441a-be3d-7ebd02809e26",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "extURL = 'https://github.com/AUTOMATIC1111/stable-diffusion-webui-wildcards'\n",
+        "shallow_clone_ext_repo(extURL)\n",
+        "\n",
+        "import os\n",
+        "import shutil\n",
+        "\n",
+        "wlidcards_lib = os.path.join(repo_root_dir, './configs/wildcards_lib')\n",
+        "target_dir = os.path.join(webUIDir, './extensions/stable-diffusion-webui-wildcards/wildcards')\n",
+        "\n",
+        "# \u5220\u9664\u76ee\u6807\u76ee\u5f55\n",
+        "if os.path.exists(target_dir):\n",
+        "    shutil.rmtree(target_dir)\n",
+        "\n",
+        "# \u521b\u5efa\u8f6f\u94fe\u63a5\n",
+        "os.symlink(wlidcards_lib, target_dir)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "a2ec5158-425d-4808-8ba7-04acea4e57a3",
       "metadata": {},
       "source": [
