--- a/ipynb/Kohya/Kohya-for-OpenBayes.ipynb
+++ b/ipynb/Kohya/Kohya-for-OpenBayes.ipynb
@@ -403,7 +403,7 @@
         "# \u5728project_name\u76ee\u5f55\u4e0b\u521b\u5efa\u5b50\u76ee\u5f55\n",
         "subdirs = [\n",
         "    'model', # \u6a21\u578b\u8f93\u51fa\n",
-        "    'image', # \u8bad\u7ec3\u96c6\n",
+        "    'img', # \u8bad\u7ec3\u96c6\n",
         "    'reg' , # \u6b63\u5219\u5316\u56fe\u96c6\n",
         "    'config' # \u914d\u7f6e\n",
         "]\n",
@@ -528,13 +528,14 @@
         "    # \u5982\u679c\u76ee\u5f55\u4e0d\u5b58\u5728\uff0c\u5c31\u521b\u5efa\u76ee\u5f55\n",
         "    if not os.path.exists(parent_dir):\n",
         "        os.makedirs(parent_dir)\n",
-        "    \n",
-        "    # \u5c06\u6570\u636e\u4fdd\u5b58\u5230\u6307\u5b9a\u6587\u4ef6\u8def\u5f84\n",
-        "    with open(file_path, 'w') as f:\n",
-        "        json.dump(data, f)\n",
-        "        \n",
-        "config_path = os.path.join(root_dir,training_sessions_name,session_name,'config','default.json')\n",
-        "save_json_to_file(standard_json, config_path)\n"
+        "\n",
+        "    # \u5982\u679c\u6587\u4ef6\u4e0d\u5b58\u5728\uff0c\u5c31\u5199\u5165\u6570\u636e\u5230\u6307\u5b9a\u6587\u4ef6\u8def\u5f84\n",
+        "    if not os.path.isfile(file_path):\n",
+        "        with open(file_path, 'w') as f:\n",
+        "            json.dump(data, f)\n",
+        "\n",
+        "config_path = os.path.join(root_dir, training_sessions_name, session_name, 'config', 'default.json')\n",
+        "save_json_to_file(standard_json, config_path)"
       ]
     },
     {
@@ -1262,11 +1263,9 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "9f484e38-f5b2-4546-8244-cf0c0361de14",
+      "cell_type": "markdown",
+      "id": "5b51dce4-bd8b-4270-b962-8e7305a66ec8",
       "metadata": {},
-      "outputs": [],
       "source": [
         "import psutil\n",
         "\n",
