--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -909,14 +909,29 @@
       "outputs": [],
       "source": [
         "extURL = 'https://github.com/AUTOMATIC1111/stable-diffusion-webui-wildcards'\n",
-        "shallow_clone_ext_repo(extURL)\n",
-        "\n",
+        "shallow_clone_ext_repo(extURL)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "45212d0b-69e4-4e9b-a051-ae7c0285b1b9",
+      "metadata": {},
+      "source": [
+        "## \u6620\u5c04wildcards\u9884\u8bbe\u6587\u4ef6\u5939\u5230\u62d3\u5c55\u76ee\u5f55\u4e0b"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "535ddde9-3e60-43bf-8874-be74e243b3c9",
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "import os\n",
         "import shutil\n",
         "\n",
         "wlidcards_lib = os.path.join(repo_root_dir, './configs/wildcards_lib')\n",
         "target_dir = os.path.join(webUIDir, './extensions/stable-diffusion-webui-wildcards/wildcards')\n",
-        "\n",
         "# \u5220\u9664\u76ee\u6807\u76ee\u5f55\n",
         "if os.path.exists(target_dir):\n",
         "    shutil.rmtree(target_dir)\n",
