force reinstall tensorboard for kohya ipynb

--- a/ipynb/Kohya/Kohya-for-OpenBayes.ipynb
+++ b/ipynb/Kohya/Kohya-for-OpenBayes.ipynb
@@ -1247,6 +1247,18 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "25894c70-b52e-481b-bf43-445db7e22fea",
+      "metadata": {
+        "scrolled": true
+      },
+      "outputs": [],
+      "source": [
+        "!pip install tensorboard --upgrade"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "id": "bd4bb48e-6a52-44f4-b55e-75097b4fded0",
       "metadata": {},
       "outputs": [],
@@ -1311,22 +1323,6 @@
         "\n",
         "!$cmd"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "8e2bab7b-c024-438c-8562-d1e8f61c2afd",
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "28ce81b5-23b0-47b0-98c1-644eb8669a53",
-      "metadata": {},
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "code",
